3.4.0/_sources/gallery/axisartist/simple_axisline.rst.txt
.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_axisartist_simple_axisline.py>`     to download the full example code
    .. rst-class:: sphx-glr-example-title

    .. _sphx_glr_gallery_axisartist_simple_axisline.py:


===============
Simple Axisline
===============



.. image:: /gallery/axisartist/images/sphx_glr_simple_axisline_001.png
    :alt: simple axisline
    :class: sphx-glr-single-img






.. code-block:: default


    import matplotlib.pyplot as plt
    from mpl_toolkits.axisartist.axislines import AxesZero


    fig = plt.figure()
    fig.subplots_adjust(right=0.85)
    ax = fig.add_subplot(axes_class=AxesZero)

    # make right and top axis invisible
    ax.axis["right"].set_visible(False)
    ax.axis["top"].set_visible(False)

    # make xzero axis (horizontal axis line through y=0) visible.
    ax.axis["xzero"].set_visible(True)
    ax.axis["xzero"].label.set_text("Axis Zero")

    ax.set_ylim(-2, 4)
    ax.set_xlabel("Label X")
    ax.set_ylabel("Label Y")
    # or
    #ax.axis["bottom"].label.set_text("Label X")
    #ax.axis["left"].label.set_text("Label Y")

    # make new (right-side) yaxis, but with some offset
    ax.axis["right2"] = ax.new_fixed_axis(loc="right", offset=(20, 0))
    ax.axis["right2"].label.set_text("Label Y2")

    ax.plot([-2, 3, 2])
    plt.show()


.. _sphx_glr_download_gallery_axisartist_simple_axisline.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: simple_axisline.py <simple_axisline.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: simple_axisline.ipynb <simple_axisline.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
